--- a/public/css/cart.css
+++ b/public/css/cart.css
@@ -11,7 +11,8 @@
     appearance: none;
     -moz-appearance: textfield;
     padding: 0.5rem 0.75rem;
-    width: 4rem;
+    width: 2.5rem;
+    max-width: 7rem;
     margin: 0;
 }
 
@@ -25,8 +26,9 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 2rem;
-    height: 3rem;
+    width: 1.5rem;
+    max-width: 10rem;
+    height: 2rem;
     border: 1px solid #ddd;
     cursor: pointer;
     user-select: none;
