--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,64 @@
+@import "./cart";
+/* @import "./sidebar"; */
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+html {
+    color-scheme: dark light;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
+}
+
+img,
+svg,
+picture,
+video,
+canvas,
+iframe,
+embed,
+object {
+    max-width: 100%;
+    display: block;
+}
+
+body {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+        Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+        sans-serif;
+    font-size: 1.125rem;
+    line-height: 1.6;
+    background-color: darkslateblue;
+}
+
+main {
+    width: min(65ch, 100% -4rem);
+}
+
+a {
+    text-decoration: none;
+}
+
+/* Media query for responsive font sizes */
+@media (max-width: 768px) {
+    body {
+        font-size: 1rem;
+    }
+
+    main {
+        width: min(60ch, 100% -2rem);
+    }
+}
+
+@media (max-width: 480px) {
+    body {
+        font-size: 0.875rem;
+    }
+
+    main {
+        width: min(55ch, 100% -1rem);
+    }
+}
