--- a/resources/css/ad_product.css
+++ b/resources/css/ad_product.css
@@ -1,17 +1,17 @@
 ::-webkit-scrollbar {
-    width: 10px;
+    width: 8px;
 }
 
 /* Track */
 ::-webkit-scrollbar-track {
-    background: #888;
-    border-radius: 5px;
+    background: #ede6ca;
+    border-radius: 2px;
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
     background: #000;
-    border-radius: 5px;
+    border-radius: 4px;
 }
 
 /* Handle on hover */
